--- a/src/index.css
+++ b/src/index.css
@@ -1,37 +1,37 @@
-body,
-html,
-#root {
-  margin: 0;
-  padding: 0;
-  width: 375px;
-  height: 100%;
-  display: flex;
-  justify-content: center; /* 수평 중앙 정렬 */
-}
+/*body,*/
+/*html,*/
+/*#root {*/
+/*  margin: 0;*/
+/*  padding: 0;*/
+/*  width: 375px;*/
+/*  height: 100%;*/
+/*  display: flex;*/
+/*  justify-content: center; !* 수평 중앙 정렬 *!*/
+/*}*/
 
-.app-container {
-  width: 100%;
-  height: 100%;
-  background-color: #ffffff; /* 배경색 설정 */
-  overflow-y: auto; /* 필요한 경우 수직 스크롤 허용 */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* 옵션: 페이지에 그림자 추가 */
-}
+/*.app-container {*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  background-color: #ffffff; !* 배경색 설정 *!*/
+/*  overflow-y: auto; !* 필요한 경우 수직 스크롤 허용 *!*/
+/*  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); !* 옵션: 페이지에 그림자 추가 *!*/
+/*}*/
 
-/* 나머지 스타일은 각각의 컴포넌트 스타일 시트를 참고하세요 */
+/*!* 나머지 스타일은 각각의 컴포넌트 스타일 시트를 참고하세요 *!*/
 
-.custom-dots {
-  position: absolute;
-  bottom: 10px; /* 이미지 하단에서 20px 위에 배치 */
-  left: 50%; /* 슬라이더 너비의 50% 위치 (가운데) */
-  transform: translateX(-50%); /* 정확하게 가운데로 이동 */
-  z-index: 1; /* 이미지보다 위에 표시되도록 z-index 설정 */
-}
+/*.custom-dots {*/
+/*  position: absolute;*/
+/*  bottom: 10px; !* 이미지 하단에서 20px 위에 배치 *!*/
+/*  left: 50%; !* 슬라이더 너비의 50% 위치 (가운데) *!*/
+/*  transform: translateX(-50%); !* 정확하게 가운데로 이동 *!*/
+/*  z-index: 1; !* 이미지보다 위에 표시되도록 z-index 설정 *!*/
+/*}*/
 
-.custom-dots li {
-  margin: 0 0.5px;
-}
+/*.custom-dots li {*/
+/*  margin: 0 0.5px;*/
+/*}*/
 
-.custom-dots li button:before {
-  color: white; /* 점의 색상을 흰색으로 설정 */
-  font-size: 4px;
-}
+/*.custom-dots li button:before {*/
+/*  color: white; !* 점의 색상을 흰색으로 설정 *!*/
+/*  font-size: 4px;*/
+/*}*/
