--- a/src/components/CategoryView/CategoryView.module.css
+++ b/src/components/CategoryView/CategoryView.module.css
@@ -1,52 +1,51 @@
 /* CategoryView.module.css */
 
 .mainContainer {
-    padding: 0; /* 기본적으로 패딩은 0으로 설정 */
+  padding: 0; /* 기본적으로 패딩은 0으로 설정 */
 }
 
 .title {
-    text-align: left;
-    margin: 20px;
-    margin-bottom: 0px;
-    font-size: 16px;
-    font-weight: bold;
-    color: #454545;
+  text-align: left;
+  margin: 20px;
+  margin-bottom: 0px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #454545;
 }
 
 .gridContainer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 3열 그리드 */
-    gap: 15px 25px; /* 행 간격 15px, 열 간격 20px */
-    padding: 20px 50px; /* 그리드의 패딩 (양옆 20px, 위아래 15px) */
-    justify-content: center;
-    align-content: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr); /* 3열 그리드 */
+  gap: 15px 25px; /* 행 간격 15px, 열 간격 20px */
+  padding: 1em; /* 그리드의 패딩 (양옆 20px, 위아래 15px) */
+  justify-items: center;
 }
 
 .gridItem {
-    position: relative;
-    display: flex;
-    background-color: #f5f5f5;
-    border-radius: 8px;
-    align-items: center;
-    padding: 10px;
-    width: 61px;
-    height: 61px;
-    box-sizing: border-box;
-    justify-content: center;
+  position: relative;
+  display: flex;
+  background-color: #f5f5f5;
+  border-radius: 8px;
+  align-items: center;
+  padding: 10px;
+  width: 84px;
+  height: 84px;
+  box-sizing: border-box;
+  justify-content: center;
 }
 
 .gridText {
-    font-size: 15px;
-    font-weight: bold;
-    font-family: "Noto Sans KR";
-    color: #454545;
-    text-align: center;
+  font-size: 18px;
+  font-weight: bolder;
+  font-family: 'Noto Sans KR';
+  color: #454545;
+  text-align: center;
 }
 
 .icon {
-    position: absolute;
-    bottom: 0px;
-    right: -8px;
-    width: 24px; /* 아이콘 크기 조정 */
-    height: auto;
+  position: absolute;
+  bottom: 0px;
+  right: -8px;
+  width: 24px; /* 아이콘 크기 조정 */
+  height: auto;
 }
